--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "gestaopro-braip-webhook",
+  "version": "1.0.0",
+  "description": "Backend para receber webhooks da Braip",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "axios": "^1.6.0"
+  }
+}
+{
   "name": "base44-app",
   "private": true,
   "version": "0.0.0",
